feat: solution for day 12 part 2